--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 					<tr>
 						<td width="40%">
-							<img src="img.png">
+							<img src="rohit.png.jpeg">
 						</td>
 
 						<td width="60%">
