--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 					</tr>
 
 					<tr>
-						<td width="40%">
-							<img src="rohit.png.jpeg">
+						<td width="20%">
+							<img class="w-96 h-96" src="rohit.png.jpeg">
 						</td>
 
 						<td width="60%">
